--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Extreme Dynamics & Therapeutics Lab 
+name: Extreme Dynamics & Therapeutics Laboratory 
 
 # Short bio or description (displayed in the header)
 description: Drugging Intrinsically Disordered Proteins
