--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Extreme Dynamics & Therapeutics Laboratory 
 
 # Short bio or description (displayed in the header)
-description: Drugging Intrinsically Disordered Proteins
+description: We employ interdisciplinary methods to study, understand, & drug proteins with extreme conformational dynamics to address human disease.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
