--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Extreme Dynamics & Therapeutics Laboratory
 description: Understanding & drugging intrinsically disordered proteins. 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: images/c0_AB.png
 
 #
 # Flags below are optional
