--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Extreme Dynamics & Therapeutics Laboratory 
 
 # Short bio or description (displayed in the header)
-description: Understanding & drugging intrinsically disordered proteins. 
+description: Understanding & drugging intrinsically disordered proteins 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: images/c0_AB.png
