--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ name: eXtreme Dynamics & Therapeutics Laboratory
 
 # Short bio or description (displayed in the header) 
 description: Understanding & drugging intrinsically disordered proteins 
-
+index: home.md
 # URL of your avatar or profile pic (you could use your GitHub profile pic) 
 avatar: images/c0_AB.png
 
@@ -53,7 +53,7 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: /posts/:title
+#permalink: /posts/:title
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
