--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ description: Understanding & drugging intrinsically disordered proteins
 index: home.md
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: images/c0_AB.png
+destination: _site
 
 #
 # Flags below are optional
