--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@ index: home.md
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: images/c0_AB.png
 destination: _site
+index: home.md
+
 
 #
 # Flags below are optional
