--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@
 name: Extreme Dynamics & Therapeutics Laboratory
 
 # Short bio or description (displayed in the header)
-description: Understanding & drugging intrinsically disordered proteins 
+description: Understanding & drugging intrinsically disordered proteins test
 index: home.md
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: images/c0_AB.png
 destination: _site
 
-# 
+#
 # Flags below are optional
 #
 
@@ -31,7 +31,6 @@ footer-links:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
-
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
@@ -65,7 +64,7 @@ kramdown:
   syntax_highlighter: rouge
   syntax_highlighter_opts:
     # Use existing pygments syntax highlighting css
-    css_class: 'highlight'
+    css_class: "highlight"
 
 # Set the Sass partials directory, as we're using @imports
 sass:
